# placesdesenergies_data_extraction

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  extractor.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  pipeline.py
src/api/: main.py
src/extraction/: fields.py
src/genai/: extractor.py
src/helpers/: excel_exporter.py  extractor.py  loader.py
src/ingestion/: loader.py
src/models/: schema.py
src/normalize/: validators.py
src/utils/: logging.py  prompts.py  redis_cache.py
tests/: smoke_test.py
