[project]
name = "placesdesenergies-data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "markdownify>=1.2.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "paddlepaddle-gpu>=2.6.2",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.14.3",
    "ruff>=0.14.4",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
