[project]
name = "placesdesenergies-data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.3.0",
    "pdf2image>=1.17.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.0",
]
